Fix overflow problem.

--- a/app/css/photoStripe.styl
+++ b/app/css/photoStripe.styl
@@ -3,8 +3,7 @@
   height: 100vh
   width: 100vw
   color: white
-  // img
-    // overflow: hidden
+  overflow: hidden
   .imgBack
     position: absolute;
     top: -50%;
